--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,19 @@
 /back/node_modules
 /back/config.json
 /back/data.json
-/back/package-lock.json
-/back/package.json
+/back/RegParam.json
+/back/RegParamSave.json
+/back/RegParamUpdate.json
 /back/phpmyadmin
 
 /frontreact/node_modules
-/frontreact/package.json
-/frontreact/package-lock.json
 /frontreact/README.md
 /frontreact/public/robots.txt
 /frontreact/public/manifest.json
 /safe
+
+
+
+
+
+
