--- a/back/package.json
+++ b/back/package.json
@@ -18,13 +18,16 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "fs": "^0.0.1-security",
+    "jsmodbus": "^4.0.10",
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^4.0.0",
+    "modbus-serial": "^8.0.20-no-serial-port",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "serialport": "^12.0.0"
   },
   "devDependencies": {
     "concurrently": "^9.1.2"
