--- a/back/package.json
+++ b/back/package.json
@@ -27,7 +27,8 @@
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
     "path": "^0.12.7",
-    "serialport": "^12.0.0"
+    "serialport": "^12.0.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "concurrently": "^9.1.2"
