--- a/back/package.json
+++ b/back/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "path": "^0.12.7",
     "serialport": "^12.0.0",
