--- a/frontreact/package.json
+++ b/frontreact/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "modbus-serial": "^8.0.21-no-serial-port",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
